Recent changes:

Key:
     - Something removed
     + Something added
     * Something changed / fixed

v.0.5dev (ongoing development)

v0.5.0
This version has split off from unstable-0.4.3. Includes major changes.
 + LCDd now does dynamic loading of driver modules
 * New API in use
 + LCDd will use fill-in functions for drivers that don't support a certain
   function. Available for: vbar, hbar, bignum, heartbeat, icon, cursor.
 * Server internal functions cleaned up, moved to other files etc.
 * Menu system rewritten
 + Client-supplied menus are now supported
 * Key support improved: now keys have descriptive names, not just a letter
   anymore.
 + Reloading of configuration and drivers by sending a SIGHUP. Probably
   needs improvement ;)
 * HD44780 output register support on winamp wiring
 * Reporting levels are now used more consistently
 + lcdexec client added
 * Display update frequency is now exactly 8Hz. Key scan frequency increased
   to 32Hz.
 * Priority scheme changed. Priority classes are now used, that indicate what
   kind of a screen we're dealing with. More useful for interactive clients.
 + better support for operating systems other than Linux: *BSD, Darwin
 + menu support for lcdproc client (configure option)
 + Added CFontz633 driver for CrytalFontz CFA633
 + Added CFontzPacket driver fro CrystalFontz CFA-633, CFA-631, CFA-635
 + Added glcdlib meta-driver for all LCDs supported by graphlcd-base
 + Added icp_a106 driver for A106 alarm/LCD boards in 19" racks by ICP
 + Added imon driver for iMON IR/VFD Modules from Silverstone, Uneed, ...
 + Added IOWarrior driver for IOWarrior USB controllers
 + Added lcterm driver for serial LCD terminal from Neumark Elektronik
 + Added ms6931 driver for MSI-6931 displays in 1U rack servers by MSI
 + Added mtc_s16209x driver for MTC-S16209x by Microtips Technology Inc
 + Added NoritakeVFD driver for Noritake VFD Device CU20045SCPB-T28A
 + Added pyramid driver for Pyramid LC-Displays