@@ -2,6 +2,6 @@
 
 bin_SCRIPTS = fortune.pl iosock.pl tail.pl x11amp.pl
 
-EXTRA_DIST = fortune.pl iosock.pl tail.pl x11amp.pl
+EXTRA_DIST = $(bin_SCRIPTS)
 
 ## EOF
