@@ -1,0 +1,57 @@
+# lcdexec LCDproc client configuration file 
+
+## general options for lcdexec ##
+[lcdexec]
+# address of the LCDd server to connect to
+Address=localhost
+
+# Port of the server to connect to
+Port=13666
+
+# set reporting level
+ReportLevel=2
+
+# report to to syslog ?
+ReportToSyslog=false
+
+# stay in foreground ?
+Foreground=false
+
+# menu commands for the main menu
+# format: <text to be displayed>, <command to be executed>
+MenuCommand="You can say A, echo A"
+MenuCommand="Or you can say B, echo B"
+
+# sub menu for the main menu
+# format: <name to be displayed>, <menu name>
+SubMenu="A menu, menu1"
+
+# sub menu commands
+# option names must start with the name of a defined menu
+# format: see menu commands
+menu1_MenuCommand="p, echo P"
+menu1_MenuCommand="q, echo Q"
+
+
+# Ideally lcdexec should be re-written so that menu definitions
+# look somewhat like:
+#
+#[Menu]
+#Type=Menu
+#Entry=SubMenu1
+#Entry=SubMenu2
+#
+#[SubMenu1]
+#Type=Action
+#Exec=/bin/program to execute with parameters
+#
+#[SubMenu2]
+#Type=Action
+#Exec=/bin/otherprogram with parameters
+#
+# Further Extensions:
+# - use input for parameters e.g. IP-Adresses, Sliders
+# - display result if a command on Screen
+# - jump to other menus depending on the output/result of a command
+
+# EOF
