@@ -2,6 +2,6 @@
 
 bin_SCRIPTS = lcdmetar.pl
 
-EXTRA_DIST = lcdmetar.pl
+EXTRA_DIST = $(bin_SCRIPTS)
 
 ## EOF
